--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -410,14 +410,14 @@
   "setGenDirectAutotype": "Als er slechts één overeenkomstig item wordt gevonden, gebruik dat dan om automatisch in te vullen",
   "setGenFunction": "Functie",
   "setGenAutoSyncOnClose": "Bij afsluiten automatisch opslaan en synchroniseren",
-  "setGenAutoSyncTimer": "Periodiek automatisch opslaan en synchroniseren",
+  "setGenAutoSyncTimer": "Periodiek automatisch opslaan en synchroniseren:",
   "setGenAutoSyncTimerOff": "Uitgeschakeld",
   "setGenAutoSyncTimerInterval": "Elke {} minuten",
   "setGenRememberKeyFiles": "Sleutelbestanden onthouden",
   "setGenNoRememberKeyFiles": "Niet onthouden",
   "setGenRememberKeyFilesData": "Bewaar in de interne app-opslag",
   "setGenRememberKeyFilesPath": "Onthoud alleen pad naar sleutelbestanden",
-  "setGenLockInactive": "Automatisch vergrendelen na inactiviteit:",
+  "setGenLockInactive": "Automatisch vergrendelen na inactiviteit",
   "setGenNoAutoLock": "Niet automatisch vergrendelen",
   "setGenLockMinutes": "{} minuten",
   "setGenLockHour": "1 uur",
