--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -243,7 +243,7 @@
   "detHistoryDel": "Usuń stan",
   "detHistoryEmpty": "Pusty",
   "detHistoryModified": "Modyfikowany",
-  "detHistoryRec": "Zapis",
+  "detHistoryRec": "zapis",
   "detHistoryRecs": "zapisy",
   "detHistoryVersion": "Wersja",
   "detHistorySaved": "Zapisany",
