--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -235,7 +235,7 @@
   "detAttDownload": "Presiona mayús-clic sobre el botón para descargarlo o",
   "detAttDelToRemove": "Delete para eliminar",
   "detAttSave": "Guardar como ...",
-  "detEmpty": "Tus contraseñas se mostarán aquí",
+  "detEmpty": "Tus contraseñas se mostrarán aquí",
   "detGroupRestore": "Para restaurar este grupo, por favor arrástralo a cualquier grupo fuera de la papelera",
   "detHistoryClickPoint": "Haz clic sobre el punto de línea de tiempo del historial para ver el estado",
   "detHistoryReturn": "volver a entrada",
@@ -245,8 +245,8 @@
   "detHistoryModified": "modificado",
   "detHistoryRec": "registro",
   "detHistoryRecs": "registros",
-  "detHistoryVersion": "versión",
-  "detHistorySaved": "guardado",
+  "detHistoryVersion": "Versión",
+  "detHistorySaved": "Guardado",
   "detHistoryNoTitle": "sin título",
   "detHistoryCurState": "estado actual",
   "detHistoryCurUnsavedState": "estado sin guardar actual",
@@ -303,13 +303,13 @@
   "detSetupOtpAlertBody1": "1. dirígete a la página de autorización",
   "detSetupOtpAlertBody2": "2. haz un pantallazo del código QR {}",
   "detSetupOtpAlertBody3": "3. pégalo aquí {}",
-  "detSetupOtpAlertBody3Mobile": "3. selecciónalo o escanéalo con tu cámara usando el botón Seleccionar/Escanear inferior",
+  "detSetupOtpAlertBody3Mobile": "3. selecciónalo o escanéalo con tu cámara usando el botón Seleccionar/Escanear",
   "detSetupOtpAlertBody4": "Si no puedes escanearlo, haz clic sobre Introducir código manualmente",
   "detSetupOtpManualButton": "Introducir código manualmente",
   "detSetupOtpScanButton": "Seleccionar/Escanear",
   "detSetupOtpAlertBodyWith": "con {}",
   "detOtpImageError": "Error leyendo imagen",
-  "detOtpImageErrorBody": "Perdona, no pudimos leer el formato de imagen, por favor, contacta con los autores de la aplicación con los detalles del error.",
+  "detOtpImageErrorBody": "Perdón, no pudimos leer el formato de imagen, por favor, contacta con los autores de la aplicación junto con los detalles del error.",
   "detOtpImageReading": "Leyendo código QR...",
   "detOtpQrError": "Error al escanear código QR",
   "detOtpQrErrorBody": "Perdón, no pudimos leer el código QR, por favor, vuelve a intentarlo o contacta a los autores de la aplicación con detalles sobre el error.",
@@ -356,7 +356,7 @@
   "appTabWarn": "Demasiadas pestañas",
   "appTabWarnBody": "KeeWeb no se puede utilizar en dos pestañas a la vez, por favor, cierra esta pestaña.",
   "appRightsAlert": "Bloqueando la aplicación KeeWeb",
-  "appRightsAlertBody1": "Tu aplicación de KeeWeb no está protegida todavía contra cambios no autorizados. Te estamos pidiendo permiso para hacer que la aplicación sea escribible solo para administradores.",
+  "appRightsAlertBody1": "Tu aplicación KeeWeb no está protegida todavía contra cambios no autorizados. Te estamos pidiendo permiso para hacer que la aplicación tenga permiso de escritura solo para administradores.",
   "appRightsAlertBody2": "¿No quieres dar permisos? Puedes hacerlo tú mismo en Terminal",
   "setGenTitle": "Opciones generales",
   "setGenUpdate": "Actualizar",
