--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -457,8 +457,8 @@
   "setFileLastSyncUnknown": "unbekannt",
   "setFileSyncInProgress": "Synchronisierung läuft",
   "setFileSyncError": "Synchronisierungsfehler",
-  "setFilePass": "Master-Passwort",
-  "setFileConfirmPass": "Master-Passwort bestätigen",
+  "setFilePass": "Hauptpasswort",
+  "setFileConfirmPass": "Hauptpasswort bestätigen",
   "setFilePassChange": "Um das Passwort zu ändern, geben Sie es im Bestätigungsfeld an",
   "setFilePassChanged": "Das Passwort wurde geändert. Lassen Sie das Feld leer, um das bisherige Passwort zu behalten.",
   "setFilePassNotMatch": "Die Passwörter stimmen nicht überein, bitte geben Sie sie erneut ein",
