--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "L' autenticazione è completa, puoi chiudere questa tab ora.",
   "months": [
     "Gennaio",
     "Febbraio",
@@ -67,7 +68,10 @@
   "shortcuts": "Scorciatoie da tastiera",
   "help": "Aiuto",
   "settings": "Impostazioni",
-  "plugins": "Plugins",
+  "plugins": "Estensioni",
+  "ctrlKey": "ctrl",
+  "shiftKey": "maiusc",
+  "altKey": "alt",
   "cache": "cache",
   "file": "file",
   "webdav": "WebDAV",
@@ -144,6 +148,10 @@
   "genPsAmbiguous": "Simboli ambigui",
   "genPsInclude": "Simboli addizionali da includere",
   "genPsExample": "Esempio di password generata",
+  "genPsPattern": "Modello",
+  "genPsPatternHelp": "I modelli possono essere utilizzati per specificare regole personalizzate per la selezione dei caratteri. Ad esempio, 1-AA genererà password che iniziano con una cifra, seguita da un trattino e due lettere. Puoi usare questi simboli:",
+  "genPsAllRanges": "Tutti i simboli",
+  "genPsIncluded": "Simboli aggiuntivi aggiunti sopra",
   "keyChangeTitleRemote": "Chiave Principale Modificata",
   "keyChangeMessageRemote": "La chiave principale è stata cambiata per questo database. Per favore inserire una nuova chiave",
   "keyChangeTitleExpired": "Chiave Principale Scaduta",
@@ -178,6 +186,7 @@
   "searchOptions": "Opzioni",
   "searchCase": "Maiuscole/minuscole",
   "searchRegex": "Espressione regolare",
+  "searchRank": "Auto",
   "searchExact": "Esattamente",
   "openOpen": "Apri",
   "openNew": "Nuovo",
@@ -188,9 +197,9 @@
   "openXml": "Importa xml",
   "openCaps": "Block maiusc attivato",
   "openClickToOpen": "file",
-  "openKeyFile": "file key",
+  "openKeyFile": "file chiave",
   "openKeyFileDropbox": "(da dropbox)",
-  "openDropHere": "trascina qui i files",
+  "openDropHere": "trascina i files qui",
   "openFailedRead": "file",
   "openNothingFound": "nessun risultato",
   "openNothingFoundBody": "Nessun file che potrebbe essere aperto",
@@ -310,6 +319,7 @@
   "detUnlockField": "Sblocca questo campo, rendendolo immediatamente ricercabile e visibile",
   "detRevealField": "Mostra",
   "detHideField": "Nascondi",
+  "detAutoTypeField": "Auto scrittura",
   "autoTypeEntryFields": "Campi della voce",
   "autoTypeModifiers": "Modificatori",
   "autoTypeKeys": "Tasti",
@@ -322,7 +332,11 @@
   "autoTypeMsgNoWindow": "Non è stato possibile reperire il titolo della finestra attiva, inizia a digitare per cercare",
   "autoTypeMsgMatchedByWindow": "Seleziona una password per {}",
   "autoTypeNoMatches": "nessuna corrispondenza",
+  "autoTypeSelectionHint": "Digitare la sequenza di autoscrittura",
+  "autoTypeSelectionHintAction": "Scrivi solo la password",
+  "autoTypeSelectionHintOpt": "Scrivi solo il nome utente",
   "autoTypeSelectionHintShift": "Altri campi",
+  "autoTypeSelectionOtp": "One-time password",
   "appSecWarn": "Non sicuro!",
   "appSecWarnBody1": "Hai caricato questa applicazione con una connessione insicura. Qualcuno potrebbe spiarti e rubare le tue password. Consigliamo caldamente chiudere l'applicazione se non si comprende chiaramente cosa sta succedendo.",
   "appSecWarnBody2": "Si, il database è criptato ma nessuno può garantire che l'applicazione non sia stata modificata.",
@@ -391,6 +405,9 @@
   "setGenShowSubgroups": "Visualizza voci da tutti i sottogruppi",
   "setGenTableView": "Mostra le voci come una tabella",
   "setGenColorfulIcons": "Icone personalizzate colorate",
+  "setGenUseMarkdown": "Contrassegna nelle note",
+  "setGenUseGroupIconForEntries": "Utilizza automaticamente l'icona di gruppo per le nuove voci",
+  "setGenDirectAutotype": "Se viene trovata una sola voce corrispondente, selezionarla automaticamente per Autoscrittura",
   "setGenFunction": "Funzionalità",
   "setGenAutoSyncOnClose": "Salva e sincronizza automaticamente alla chiusura",
   "setGenAutoSyncTimer": "Salva e sincronizza automaticamente periodicamente",
@@ -442,6 +459,7 @@
   "setFileSyncError": "Errore sincronizzazione",
   "setFilePass": "Password principale",
   "setFileConfirmPass": "Conferma password principale",
+  "setFilePassChange": "Per cambiare la password, scrivi nel campo di Conferma",
   "setFilePassChanged": "La password è stata cambiata; lascia il campo vuoto per usare la vecchia password",
   "setFilePassNotMatch": "le password non coincidono, si prega di digitare di nuovo",
   "setFileKeyFile": "File chiave",
@@ -449,6 +467,10 @@
   "setFileNames": "Nomi",
   "setFileDefUser": "Utente di default",
   "setFileEnableTrash": "Abilita cestino",
+  "setFileHistMode": "Cronologia note",
+  "setFileHistLimited": "Elimina automaticamente i vecchi registri di cronologia",
+  "setFileHistDisabled": "Non salvare la cronologia",
+  "setFileHistUnlimited": "Conserva i registri della cronologia per sempre",
   "setFileHistLen": "Lunghezza cronologia, mantieni le ultime modifiche per ogni voce",
   "setFileHistSize": "Dimensione cronologia, MB totali per ogni file",
   "setFileBackups": "Backup",
@@ -510,6 +532,7 @@
   "setShAutoTypeGlobal": "Digita automaticamente (quando l'applicazione è in background)",
   "setShCopyPassOnly": "Copia password",
   "setShRestoreApp": "apri {}",
+  "setShGlobal": "Queste scorciatoie a livello di sistema funzionano quando l'app è in esecuzione in background. Puoi fare clic su di essi per selezionare il tuo collegamento.",
   "setShLock": "Blocca il database",
   "setShEdit": "Premere una nuova combinazione di tasti per impostarla come scorciatoia",
   "setPlInstallTitle": "Installa nuovi plugin",
@@ -583,6 +606,7 @@
   "authPopupRequiredBody": "Per favore, permetti i pop-up per questa applicazione nel tuo browser.",
   "exportFileInfo": "Informazioni file",
   "exportHtmlName": "Nome",
+  "exportHtmlDate": "Esporta data",
   "exportGenerator": "Software",
   "exportDescription": "Questo file è generato con {}.",
   "importCsvTitle": "Importa da CSV",
