--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -80,13 +80,13 @@
   "onedrive": "OneDrive",
   "menuAllItems": "Всі елементи ",
   "menuColors": "Колір ",
-  "menuTrash": "Кошик ",
-  "menuSetGeneral": "Основні ",
+  "menuTrash": "Смітник",
+  "menuSetGeneral": "Загальні",
   "menuSetAbout": "Про програму",
   "menuAlertNoTags": "Без тегів",
   "menuAlertNoTagsBody": "Ви можете додавати нові теги при редагуванні полів в розділі Теги.",
-  "menuEmptyTrash": "Очистити кошик",
-  "menuEmptyTrashAlert": "Очистити кошик? ",
+  "menuEmptyTrash": "Очистити смітник",
+  "menuEmptyTrashAlert": "Очистити смітник?",
   "menuEmptyTrashAlertBody": "Ви не зможете повернути елементи",
   "menuItemCollapsed": "Двічі натисніть, щоб розгорнути",
   "menuRestoreApp": "Відкрити {}",
@@ -118,8 +118,8 @@
   "genHidePass": "Зховати пароль",
   "genShowPass": "Показати пароль",
   "grpTitle": "Група ",
-  "grpSearch": "Включити пошук записів в цій групі",
-  "grpAutoType": "Включити автовведення",
+  "grpSearch": "Увімкнути пошук записів у цій групі",
+  "grpAutoType": "Увімкнути автозаповнення",
   "grpAutoTypeSeq": "Послідовність автовведення",
   "grpAutoTypeSeqDefault": "Використовувати послідовність автовведення за замовчуванням",
   "grpTrash": "Видалити групу з усіма елементами",
@@ -152,10 +152,10 @@
   "genPsPatternHelp": "Шаблони можна використовувати для встановлення власних правил підбору символів. Наприклад, 1-AA генеруватиме паролі, що починаються цифрою, після якої буде дефіс і дві літери. Ви можете використовувати такі символи:",
   "genPsAllRanges": "Усі символи",
   "genPsIncluded": "Інші символи додано вище",
-  "keyChangeTitleRemote": "Майстер-ключ змінено",
-  "keyChangeMessageRemote": "Майстер-ключ було змінено для цієї бази даних. Будь ласка, введіть новий ключ.",
-  "keyChangeTitleExpired": "Термін дії майстер-ключа минув",
-  "keyChangeMessageExpired": "Термін дії майстер-ключа для цієї бази даних закінчився. Будь ласка, введіть новий ключ.",
+  "keyChangeTitleRemote": "Головний пароль змінено",
+  "keyChangeMessageRemote": "Головний пароль цієї бази паролів було змінено. Введіть новий пароль",
+  "keyChangeTitleExpired": "Термін дії головного пароля завершився",
+  "keyChangeMessageExpired": "Термін дії головного пароля цієї бази паролів завершився. Будь ласка, введіть новий пароль",
   "keyChangeRepeatPassword": "Пароль ще раз",
   "keyEnter": "Вхід",
   "iconFavTitle": "Завантажити і використовувати іконку сайту",
@@ -197,7 +197,7 @@
   "openXml": "Імпортуват XML",
   "openCaps": "Caps Lock увімкнено",
   "openClickToOpen": "Натисніть, щоб відкрити файл",
-  "openKeyFile": "Файл-ключ",
+  "openKeyFile": "Ключовий файл",
   "openKeyFileDropbox": "(із Dropbox)",
   "openDropHere": "перетягніть файли сюди",
   "openFailedRead": "Не вдалося розпізнати файл",
@@ -236,7 +236,7 @@
   "detAttDelToRemove": "Delete для видалення",
   "detAttSave": "Зберегти як ...",
   "detEmpty": "Ваші паролі будуть відображатися тут",
-  "detGroupRestore": "Для того, щоб відновити цю групу, будь ласка, перетягніть її в будь-яку групу поза кошика.",
+  "detGroupRestore": "Щоб відновити цю групу, перетягніть її зі смітника в будь-яку іншу групу.",
   "detHistoryClickPoint": "Натисніть на точку на часовій шкалі, щоб побачити стан",
   "detHistoryReturn": "повернутися до запису",
   "detHistoryRevert": "Повернути до стану",
@@ -269,11 +269,11 @@
   "detUpdated": "Оновлений",
   "detNetField": "Нове поле",
   "detAttachments": "Вкладення",
-  "detDelFromTrash": "Видалити з кошика?",
+  "detDelFromTrash": "Видалити зі смітника?",
   "detDelFromTrashBody": "Ви не зможете скасувати цю операцію.",
   "detDelFromTrashBodyHint": "Щоб швидко видалити весь вміст смітника, натисніть піктограму очищення в меню смітника.",
   "detDelToTrash": "Видалити запис?",
-  "detDelToTrashBody": "Запис буде перенесено у кошик.",
+  "detDelToTrashBody": "Запис буде переміщено до смітника.",
   "detFieldCopied": "скопійовано",
   "detFieldCopiedTime": "Копіюється {} секунд",
   "detCopyHint": "Ви маєте можливість копіювати значення поля натиснувши мишкою по його назві",
@@ -360,7 +360,7 @@
   "appRightsAlertBody2": "Не хочете надавати дозвіл? Тоді, ви можете зробити це самі через Термінал",
   "setGenTitle": "Загальні налаштування",
   "setGenUpdate": "Оновлення",
-  "setGenNewVersion": "Нова версія програми була випущена і завантажена",
+  "setGenNewVersion": "Доступна нова версія програми",
   "setGenReleaseNotes": "Примітки до випуску",
   "setGenReloadToUpdate": "Перезавантажити для оновлення",
   "setGenUpdateManual": "Випущено нову версію. Вона зможе перевіряти наявність і встановлювати оновлення автоматично, але авто-оновлення з поточної версії неможливе.",
@@ -411,12 +411,12 @@
   "setGenFunction": "Функції",
   "setGenAutoSyncOnClose": "Автоматично зберігати та синхронізувати при закритті",
   "setGenAutoSyncTimer": "Автоматично зберігати та синхронізувати через деякий період часу",
-  "setGenAutoSyncTimerOff": "Відключено",
+  "setGenAutoSyncTimerOff": "Вимкнено",
   "setGenAutoSyncTimerInterval": "Кожні {} хвилин",
-  "setGenRememberKeyFiles": "Запам'ятовувати файли-ключі",
+  "setGenRememberKeyFiles": "Запам'ятовувати ключові файли",
   "setGenNoRememberKeyFiles": "Не запам'ятовувати ",
   "setGenRememberKeyFilesData": "Зберігати у внутрішній пам'яті програми",
-  "setGenRememberKeyFilesPath": "Пам'ятати тільки шлях до файлу ключа ",
+  "setGenRememberKeyFilesPath": "Пам'ятати тільки шлях до ключових файлів",
   "setGenLockInactive": "Якщо програма неактивна",
   "setGenNoAutoLock": "Не блокувати",
   "setGenLockMinutes": "через {} хвилин",
@@ -457,16 +457,16 @@
   "setFileLastSyncUnknown": "невідомо",
   "setFileSyncInProgress": "йде синхронізація",
   "setFileSyncError": "помилка синхр-ї",
-  "setFilePass": "Майстер пароль",
-  "setFileConfirmPass": "Підтвердити майстер пароль",
+  "setFilePass": "Головний пароль",
+  "setFileConfirmPass": "Підтвердити головний пароль",
   "setFilePassChange": "для зміни паролю, будь ласка, введіть його в поле підтвердження",
   "setFilePassChanged": "ваш пароль було змінено; залиште поле порожнім, щоб використовувати старий пароль",
   "setFilePassNotMatch": "паролі не збігаються, будь ласка, введіть заново",
-  "setFileKeyFile": "Файл ключа",
-  "setFileSelKeyFile": "Оберіть файл ключа",
+  "setFileKeyFile": "Ключовий файл",
+  "setFileSelKeyFile": "Оберіть ключовий файл",
   "setFileNames": "Назва",
   "setFileDefUser": "Ім'я користувача за замовчуванням:",
-  "setFileEnableTrash": "Включити кошик",
+  "setFileEnableTrash": "Увімкнути смітник",
   "setFileHistMode": "Історія запису",
   "setFileHistLimited": "Автоматично видаляти старі записи історії",
   "setFileHistDisabled": "Не зберігати історію",
@@ -494,7 +494,7 @@
   "setFileKdfParamsMem": "Пам'ять, кб",
   "setFileKdfParamsPar": "Паралелізм ",
   "setFileKeyChangeForce": "Вимагати оновлення ключа через (днів)",
-  "setFileUseKeyFile": "Використовувати файл ключ",
+  "setFileUseKeyFile": "Використовувати ключовий файл",
   "setFileUseGenKeyFile": "Використовувати згенерований ключовий файл",
   "setFileUseOldKeyFile": "Використовувати старий ключовий файл",
   "setFileGenKeyFile": "Згенерувати новий ключовий файл",
@@ -541,7 +541,7 @@
   "setPlInstallBtn": "Встановити",
   "setPlInstallBtnProgress": "Встановлення",
   "setPlUninstallBtn": "Видалити",
-  "setPlDisableBtn": "Відключити",
+  "setPlDisableBtn": "Вимкнути",
   "setPlEnableBtn": "Увімкнути",
   "setPlUpdateBtn": "Оновити",
   "setPlLocaleBtn": "Застосувати мову",
@@ -568,7 +568,7 @@
   "setAboutTitle": "Про KeeWeb",
   "setAboutBuilt": "Ця програма створена за допомогою цих дивовижних інструментів",
   "setAboutLic": "Ліцензія",
-  "setAboutLicComment": "Сама програмаі та всі включені компоненти, які не перебувають у вільному доступі під MIT ліцензією",
+  "setAboutLicComment": "Програма та всі вбудовані компоненти, які не мають загальнодоступного домену, ліцензовані на умовах MIT-ліцензії",
   "setAboutFirst": "Ця програма з відкритим вихідним кодом створена {}",
   "setAboutSecond": "під ліцензією {}.",
   "setAboutSource": "Вихідний код і питання на {}.",
@@ -586,7 +586,7 @@
   "setHelpUpdates": "Оновлення",
   "setHelpTwitter": "Twitter ",
   "dropboxSetupDesc": "Для використання Dropbox в окремій програмі необхідне додаткове налаштування. Створіть власну програму Dropbox та введіть внизу її ключ.",
-  "dropboxAppKey": "Dropbox ключ додатку",
+  "dropboxAppKey": "Ключ програми Dropbox",
   "dropboxAppKeyDesc": "Скопіюйте ключ з вашої програми Dropbox (налаштування для розробників)",
   "dropboxFolder": "Папка програми",
   "dropboxFolderDesc": "Якщо ваш додаток пов'язано з усім сховищем Dropbox (а не окремою папкою), введіть тут назву папки з файлами kdbx",
