--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -1,5 +1,4 @@
 {
-  "appBrowserAuthComplete": "L' autenticazione è completa, puoi chiudere questa tab ora.",
   "months": [
     "Gennaio",
     "Febbraio",
@@ -358,6 +357,7 @@
   "appRightsAlert": "Assicurando l'app KeeWeb",
   "appRightsAlertBody1": "La tua app KeeWeb non è attualmente al sicuro da modifiche non autorizzate. Ti chiediamo il permesso di rendere l'app modificabile solo agli amministratori",
   "appRightsAlertBody2": "Non vuoi dare l'autorizzazione? Puoi farlo da solo nel terminale",
+  "appBrowserAuthComplete": "L' autenticazione è completa, puoi chiudere questa tab ora.",
   "setGenTitle": "Impostazioni generali",
   "setGenUpdate": "Aggiornamento",
   "setGenNewVersion": "Una nuova versione è stata rilasciata e scaricata",
@@ -529,7 +529,7 @@
   "setShSet": "Impostazioni",
   "setShCopyPassGlobal": "Copia password (quando l'applicazione è in background)",
   "setShCopyOtp": "Copia OTP",
-  "setShAutoTypeGlobal": "Digita automaticamente (quando l'applicazione è in background)",
+  "setShAutoTypeGlobal": "Digita automaticamente",
   "setShCopyPassOnly": "Copia password",
   "setShRestoreApp": "apri {}",
   "setShGlobal": "Queste scorciatoie a livello di sistema funzionano quando l'app è in esecuzione in background. Puoi fare clic su di essi per selezionare il tuo collegamento.",
@@ -578,7 +578,7 @@
   "setHelpProblems1": "Se qualcosa va male, per favore {}",
   "setHelpProblems2": "oppure {}",
   "setHelpOpenIssue": "apri una issue su GitHub",
-  "setHelpContactLink": "contatta lo sviluppatore direttamente",
+  "setHelpContactLink": "Contatta direttamente lo svilupoatore",
   "setHelpAppInfo": "Informazioni sull'applicazione",
   "setHelpOtherPlatforms": "Altre piattaforme",
   "setHelpDesktopApps": "Applicazioni desktop",
@@ -603,7 +603,7 @@
   "launcherSave": "Salva il database delle password",
   "launcherFileFilter": "File KeePass",
   "authPopupRequired": "I pop-up sono bloccati",
-  "authPopupRequiredBody": "Per favore, permetti i pop-up per questa applicazione nel tuo browser.",
+  "authPopupRequiredBody": "Per favore, permetti i pop-up nel tuo browser o riprova",
   "exportFileInfo": "Informazioni file",
   "exportHtmlName": "Nome",
   "exportHtmlDate": "Esporta data",
