--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -1,5 +1,4 @@
 {
-  "appBrowserAuthComplete": "Verificatie is voltooid, u kunt dit tabblad nu sluiten.",
   "months": [
     "januari",
     "februari",
@@ -358,6 +357,7 @@
   "appRightsAlert": "Keeweb app vergrendelen",
   "appRightsAlertBody1": "Jouw Keeweb app is momenteel niet beschermd tegen oneigenlijke aanpassingen. Wij vragen je toestemming om de app te laten schrijven met beheerdersrechten.",
   "appRightsAlertBody2": "Wil je deze rechten niet verlenen? Je kunt dit later zelf aanpassen met de Terminal.",
+  "appBrowserAuthComplete": "Verificatie is voltooid, u kunt dit tabblad nu sluiten.",
   "setGenTitle": "Algemene instellingen",
   "setGenUpdate": "Update",
   "setGenNewVersion": "Nieuwe app-versie is uitgebracht en gedownload",
@@ -434,6 +434,7 @@
   "setGenLockAutoType": "Bij Auto-type",
   "setGenLockOrSleep": "Als de computer wordt vergrendeld of in slaapstand gaat",
   "setGenStorage": "Opslag",
+  "setGenStorageLogout": "Uitloggen",
   "setGenShowAdvanced": "Geavanceerde instellingen weergeven",
   "setGenDevTools": "Ontwikkelaarstools weergeven",
   "setGenTryBeta": "Probeer de bèta-versie tot de volgende start",
@@ -585,9 +586,12 @@
   "setHelpWebApp": "Web-app",
   "setHelpUpdates": "Updates",
   "setHelpTwitter": "Twitter-app",
-  "dropboxSetupDesc": "Om Dropbox in de zelf-gehoste app te gebruiken, is enige configuratie nodig. Maak je eigen Dropbox app aan en vul de gegeven app-key hieronder in.",
-  "dropboxAppKey": "Dropbox app-key",
-  "dropboxAppKeyDesc": "Kopieer de app-key van je Dropbox app (Developer settings)",
+  "dropboxSetupDesc": "Om Dropbox in de zelf-gehoste app te gebruiken, is enige configuratie nodig. Maak je eigen Dropbox app aan en vul de gegeven app-sleutel hieronder in.",
+  "dropboxAppKey": "Dropbox app-sleutel",
+  "dropboxAppKeyDesc": "Kopieer de app-sleutel van je Dropbox app (Developer settings)",
+  "dropboxAppKeyHint": "jouw app-sleutel",
+  "dropboxAppSecret": "Dropbox-geheim",
+  "dropboxAppSecretDesc": "Het geheim is te vinden naast de app-sleutel",
   "dropboxFolder": "App-folder",
   "dropboxFolderDesc": "Als je app gekoppeld is aan je hele Dropbox (dus niet alleen een app folder), stel hier dan de map met je kdbx-bestanden in",
   "dropboxFolderSettingsDesc": "Kies een map in je Dropbox waar bestanden worden opgeslagen (standaard: de Dropbox hoofdmap)",
