--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -1,5 +1,4 @@
 {
-  "appBrowserAuthComplete": "Uwierzytelnianie zostało zakończone, możesz teraz zamknąć tę kartę.",
   "months": [
     "styczeń",
     "luty",
@@ -38,13 +37,13 @@
     "sobota"
   ],
   "weekdaysShort": [
-    "ndz.",
-    "pon.",
-    "wt.",
-    "śr.",
-    "czw.",
-    "pt.",
-    "sob."
+    "nie",
+    "pon",
+    "wto",
+    "śro",
+    "czw",
+    "pią",
+    "sob"
   ],
   "retToApp": "Wróć do aplikacji",
   "name": "Nazwa",
@@ -119,9 +118,9 @@
   "genShowPass": "Pokaż hasło",
   "grpTitle": "Grupa",
   "grpSearch": "Włącz wyszukiwanie wpisów w tej grupie",
-  "grpAutoType": "Włącz auto-type",
-  "grpAutoTypeSeq": "Sekwencja auto-type",
-  "grpAutoTypeSeqDefault": "Użyj domyślnej sekwencji auto-type",
+  "grpAutoType": "Włącz automatyczne wpisywanie",
+  "grpAutoTypeSeq": "Sekwencja automatycznego wpisywania",
+  "grpAutoTypeSeqDefault": "Użyj domyślnej sekwencji automatycznego wpisywania",
   "grpTrash": "Usuń grupę ze wszystkimi wpisami",
   "tagTitle": "Znacznik",
   "tagTrash": "Usuń znacznik ze wszystkich wpisów",
@@ -276,7 +275,7 @@
   "detDelToTrashBody": "Wpis zostanie przeniesiony do folderu kosza.",
   "detFieldCopied": "Skopiowano",
   "detFieldCopiedTime": "Skopiowano w {} sekund",
-  "detCopyHint": "Możesz skopiować wartość pola poprzez kliknięcie jego tytułu",
+  "detCopyHint": "Możesz skopiować wartość pola, klikając jego tytuł",
   "detMore": "Więcej",
   "detClickToAddField": "Kliknij, aby dodać nowe pole",
   "detMenuAddNewField": "Dodaj nowe pole",
@@ -289,9 +288,9 @@
   "detClone": "Stwórz kopię",
   "detCopyEntryToClipboard": "Skopiuj wszystkie pola",
   "detClonedName": "Kopia",
-  "detAutoType": "Auto-type",
-  "detAutoTypeSettings": "Ustawienia auto-type",
-  "detAutoTypeEnabled": "Włącz auto-type dla tego wpisu",
+  "detAutoType": "Automatyczne wpisywanie",
+  "detAutoTypeSettings": "Ustawienia automatycznego wpisywania",
+  "detAutoTypeEnabled": "Włącz automatyczne wpisywanie dla tego wpisu",
   "detAutoTypeSequence": "Wciś. klawiszy",
   "detAutoTypeInput": "Wprowadz.",
   "detAutoTypeShortcutsDesc": "{} albo {}, gdy aplikacja jest nieaktywna",
@@ -324,15 +323,15 @@
   "autoTypeModifiers": "Klawisze modyfikujące",
   "autoTypeKeys": "Klawisze",
   "autoTypeLink": "Więcej...",
-  "autoTypeError": "Błąd auto-type",
-  "autoTypeErrorGeneric": "Wystąpił błąd podczas wykonywania auto-type: {}",
+  "autoTypeError": "Błąd automatycznego wpisywania",
+  "autoTypeErrorGeneric": "Wystąpił błąd podczas wykonywania automatycznego wpisywania: {}",
   "autoTypeErrorGlobal": "Aby użyć skrótu systemowego, uaktywnij aplikację, w której chcesz wpisać hasło",
   "autoTypeErrorNotInstalled": "{} nie jest zainstalowany",
-  "autoTypeHeader": "Auto-type: wybierz",
+  "autoTypeHeader": "Automatyczne wpisywanie: wybierz",
   "autoTypeMsgNoWindow": "Nie mogliśmy uzyskać tytułu aktywnego okna. Zacznij pisać, aby wyszukać",
   "autoTypeMsgMatchedByWindow": "Wybierz hasło dla {}",
   "autoTypeNoMatches": "Brak dopasowań",
-  "autoTypeSelectionHint": "Wpisz sekwencję auto-type",
+  "autoTypeSelectionHint": "Wpisz sekwencję automatycznego wpisywania",
   "autoTypeSelectionHintAction": "Wpisz tylko hasło",
   "autoTypeSelectionHintOpt": "Wpisz tylko nazwę użytkownika",
   "autoTypeSelectionHintShift": "Inne pola",
@@ -358,6 +357,7 @@
   "appRightsAlert": "Blokowanie aplikacji KeeWeb",
   "appRightsAlertBody1": "Twoja aplikacja KeeWeb jest zapisywalna. Prosimy o uprawnienia administratora, aby mógł być zapisywalny tylko dla administratorów.",
   "appRightsAlertBody2": "Nie chcesz udzielać uprawnień? Możesz to zrobić w Terminalu",
+  "appBrowserAuthComplete": "Uwierzytelnianie zostało zakończone, możesz teraz zamknąć tę kartę.",
   "setGenTitle": "Ustawienia ogólne",
   "setGenUpdate": "Aktualizacja",
   "setGenNewVersion": "Nowa wersja aplikacji została wydana i pobrana",
@@ -407,7 +407,7 @@
   "setGenColorfulIcons": "Kolorowe niestandardowe ikony na liście",
   "setGenUseMarkdown": "Markdown w notatkach",
   "setGenUseGroupIconForEntries": "Automatycznie używaj ikony grupy do nowych wpisów",
-  "setGenDirectAutotype": "Jeśli znaleziono tylko jeden pasujący wpis, wybierz go automatycznie dla auto-type",
+  "setGenDirectAutotype": "Jeśli znaleziono tylko jeden pasujący wpis, wybierz go automatycznie dla automatycznego wpisywania",
   "setGenFunction": "Działanie",
   "setGenAutoSyncOnClose": "Automatycznie zapisuj i synchronizuj przy zamknięciu",
   "setGenAutoSyncTimer": "Automatycznie zapisuj i synchronizuj okresowo",
@@ -431,9 +431,10 @@
   "setGenLock": "Autoblokowanie",
   "setGenLockMinimize": "Gdy aplikacja jest zminimalizowana",
   "setGenLockCopy": "Po skopiowaniu hasła",
-  "setGenLockAutoType": "Przy auto-type",
+  "setGenLockAutoType": "Przy automatycznym wpisywaniu",
   "setGenLockOrSleep": "Gdy komputer jest zablokowany lub uśpiony",
   "setGenStorage": "Przechowywanie",
+  "setGenStorageLogout": "Wyloguj",
   "setGenShowAdvanced": "Pokaż zaawansowane ustawienia (mogą być niebezpieczne)",
   "setGenDevTools": "Pokaż narzędzia twórcy",
   "setGenTryBeta": "Wypróbuj jednorazowo wersję beta",
@@ -519,7 +520,7 @@
   "setShCopyPass": "Skopiuj hasło albo wybrane pole",
   "setShCopyUser": "Skopiuj użytkownika",
   "setShCopyUrl": "Skopiuj stronę WWW",
-  "setShAutoType": "Auto-type wybranego wpisu",
+  "setShAutoType": "Automatyczne wpisywanie wybranego wpisu",
   "setShPrev": "Idź do poprzedniego elementu",
   "setShNext": "Idź do następnego elementu",
   "setShCreateEntry": "Stwórz wpis",
@@ -529,7 +530,7 @@
   "setShSet": "Ustawienia aplikacji",
   "setShCopyPassGlobal": "Skopiuj hasło",
   "setShCopyOtp": "Skopiuj OTP",
-  "setShAutoTypeGlobal": "Auto-type",
+  "setShAutoTypeGlobal": "Automatyczne wpisywanie",
   "setShCopyPassOnly": "Skopiuj hasło",
   "setShRestoreApp": "Otwórz {}",
   "setShGlobal": "Te ogólnosystemowe skróty działają, gdy aplikacja jest uruchomiona w tle. Możesz je kliknąć, aby wybrać własny skrót.",
@@ -578,7 +579,7 @@
   "setHelpProblems1": "Jeśli coś pójdzie nie tak, proszę {}",
   "setHelpProblems2": "albo {}",
   "setHelpOpenIssue": "otworzyć zagadnienie na GitHubie",
-  "setHelpContactLink": "bezpośrednio skontaktować się z autorem",
+  "setHelpContactLink": "skontaktować się bezpośrednio z autorem",
   "setHelpAppInfo": "Informacje o aplikacji",
   "setHelpOtherPlatforms": "Inne platformy",
   "setHelpDesktopApps": "Aplikacje desktop",
@@ -588,6 +589,9 @@
   "dropboxSetupDesc": "Trochę konfiguracji jest wymagane do użycia Dropboksa jako aplikacji na własnym serwerze. Proszę stworzyć własną aplikację Dropbox i wpisać jej klucz poniżej.",
   "dropboxAppKey": "Klucz aplikacji Dropbox",
   "dropboxAppKeyDesc": "Skopiuj klucz z twojej aplikacji Dropbox (ustawienia programisty)",
+  "dropboxAppKeyHint": "twój klucz aplikacji",
+  "dropboxAppSecret": "Sekret aplikacji Dropbox",
+  "dropboxAppSecretDesc": "Sekret znajduje się obok klucza aplikacji",
   "dropboxFolder": "Folder aplikacji",
   "dropboxFolderDesc": "Jeżeli twoja aplikacja jest połączona z całym Dropboksem (nie z folderem aplikacji), ustaw tutaj folder z twoimi plikami KDBX",
   "dropboxFolderSettingsDesc": "Wybierz dowolny folder w twoim Dropboksie, w którym będą przechowywane pliki (domyślnie folder główny)",
